Tring to fix search logo not showing up in the search bar.

--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,7 @@ a:hover {
     vertical-align: middle;
     max-width: 60%;
     height: auto;
+    padding-left: 5px;
 }
 
 .appus-icon-image:hover {
@@ -93,7 +94,7 @@ a:hover {
     align-self: center;
     border: 2px solid #F2F2F2;
     border-radius: 30px;
-    background: url(/images/search_icon.png) no-repeat scroll 15px 7px;
+    background: url(/images/search-icon.png) no-repeat scroll 15px 7px;
     padding-left: 50px;
 }
 
